--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grievance-site",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
